syntax = "proto3";

option java_multiple_files = true;
option java_package = "sanity.nil.grpc.block";
option java_outer_classname = "BlockServiceProto";

package block;

service BlockService {
  rpc CheckBlocksExistence (CheckBlocksExistenceRequest) returns (CheckBlocksExistenceResponse) {}
  rpc DeleteBlocks (DeleteBlocksRequest) returns (DeleteBlocksResponse) {}
  rpc UpdateBlocksStatus (UpdateBlocksStatusRequest) returns (UpdateBlocksStatusResponse) {}
}

message CheckBlocksExistenceRequest {
  repeated string hash = 1;
}

message CheckBlocksExistenceResponse {
  repeated string missingBlocks = 1;
}

message DeleteBlocksRequest {
  repeated string hash = 1;
}

message DeleteBlocksResponse {
  Code code = 1;
}

enum Code {
  success = 0;
  failure = 1;
}

enum BlockStatus {
  uploaded = 0;
  deleted = 1;
}

message UpdateBlocksStatusRequest {
  repeated string blocks = 1;
  BlockStatus newStatus = 2;
}

message UpdateBlocksStatusResponse {
  Code code = 1;
}